Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -415,7 +415,14 @@
     </form>
   </div>
 </section>
+<input type="hidden" name="_next" value="./thanks.html">
 
+  <!-- Optional extras -->
+  <input type="hidden" name="_subject" value="New Message from Portfolio">
+  <input type="text" name="_gotcha" style="display:none" />
+
+  <button type="submit">Send Message</button>
+</form>
 
 
 
@@ -432,4 +439,5 @@
   </footer>
 
 </body>
+
 </html>
