Fix HTML structure and styling issues

--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
       color: var(--primary);
     }
 
-    /* Hero */
+    <div class="hero-content">
+  <img src="./images/profile.png" alt="Kushal" style="width:150px; height:150px; border-radius:50%; border:5px solid white; margin-bottom:1.5rem; box-shadow:0 5px 15px rgba(0,0,0,0.3);">
+  <h1>Hello, I'm Kushal</h1>
+  <!-- baki -->
+</div>
     #home {
       height: 100vh;
       min-height: 600px;
@@ -441,4 +445,5 @@
 </body>
 
 </html>
+
 
