Revise portfolio content and styles
Updated portfolio content and styling, including skills and about sections.

--- a/index.html
+++ b/index.html
@@ -224,8 +224,9 @@ footer { background:var(--text); color:white; text-align:center; padding:3rem 2r
 </div>
 <div>
 <h3>Hi, I'm Kushal!</h3>
-<p>Passionate web developer and student creating functional, beautiful websites.</p>
-<p><strong>Location:</strong> Kathmandu, Nepal<br><strong>Interests:</strong> Web Dev, UI/UX, Open Source</p>
+<p>As an Accountant, I thrive on organization and precision. As a Photographer and Content Creator, I live for visual storytelling and creativity. 
+  I’m a student dedicated to mastering the balance between financial clarity and creative expression. Let’s connect and create!.</p>
+<p><strong>Location:</strong> Okhaldhunga, Nepal<br><strong>Interests:</strong> Photography, Reading, content create</p>
 </div>
 </div>
 </section>
@@ -236,15 +237,15 @@ footer { background:var(--text); color:white; text-align:center; padding:3rem 2r
 <div class="skills-grid">
 <div class="skill-card" style="animation:fadeIn 0.6s forwards 0.2s;">
 <div class="skill-icon"><i class="fab fa-html5"></i></div>
-<h3>HTML5</h3><p>Semantic markup, Accessibility</p>
+<h3>Visual Storytelling</h3><p>Composition, Color Grading, Lighting Theory</p>
 </div>
 <div class="skill-card" style="animation:fadeIn 0.6s forwards 0.4s;">
 <div class="skill-icon"><i class="fab fa-css3-alt"></i></div>
-<h3>CSS3</h3><p>Responsive Design, Flexbox, Grid</p>
+<h3>Digital Post-Production</h3><p>Adobe Suite (Lightroom/Photoshop), Video Editing (CapCut/Premiere)</p>
 </div>
 <div class="skill-card" style="animation:fadeIn 0.6s forwards 0.6s;">
 <div class="skill-icon"><i class="fab fa-js-square"></i></div>
-<h3>JavaScript</h3><p>ES6+, DOM, Async</p>
+<h3>Social Architecture</h3><p>Algorithm Analysis, SEO Optimization, Trend Forecasting</p>
 </div>
 <div class="skill-card" style="animation:fadeIn 0.6s forwards 0.8s;">
 <div class="skill-icon"><i class="fab fa-git-alt"></i></div>
@@ -315,3 +316,4 @@ faders.forEach(fader=>{ appearOnScroll.observe(fader); });
 
 </body>
 </html>
+
