--- a/index.html
+++ b/index.html
@@ -259,16 +259,21 @@ footer { background:var(--text); color:white; text-align:center; padding:3rem 2r
 <h2 class="section-title">My Projects</h2>
 <div class="projects-grid">
 <div class="project-card" style="animation:fadeIn 0.6s forwards 0.2s;">
-<img src="https://via.placeholder.com/400x300?text=EMI+Calculator" class="project-img" alt="EMI Calculator">
+<img src="images/emi-calculator.png" class="project-img" alt="EMI Calculator">
+
 <div class="project-info">
-<h3>EMI Calculator</h3><p>Responsive EMI Calculator using HTML/CSS/JS</p>
-<div class="project-links">
-<a href="#" target="_blank">GitHub</a>
-<a href="#" target="_blank">Live Demo</a>
-</div>
-</div>
-</div>
-</div>
+  <h3>EMI Calculator</h3>
+  <p>Responsive EMI Calculator built with HTML, CSS, and JavaScript.</p>
+
+  <div class="project-links">
+    <a href="https://github.com/kushalphuyal/emi-calculator" target="_blank">
+      GitHub
+    </a>
+    <a href="https://kushalphuyal.github.io/emi-calculator/" target="_blank">
+      Live Demo
+    </a>
+  </div>
+
 </section>
 
 <!-- Contact -->
@@ -316,4 +321,5 @@ faders.forEach(fader=>{ appearOnScroll.observe(fader); });
 
 </body>
 </html>
+
 
