--- a/index.html
+++ b/index.html
@@ -100,9 +100,15 @@ button { background: var(--primary); color: white; border: none; padding: 1rem; 
   <h2 class="section-title">Professional Profile</h2>
   <div class="grid-2">
     
-    <div class="about-img-box">
-      <img src="./images/portfolio-shot.jpg" alt="Kushal Portfolio Photo" class="about-img" onerror="this.src='https://via.placeholder.com/500x400?text=Upload+Photo+to+Images+Folder'">
-    </div>
+    <<div class="about-img-box" style="display: flex; flex-direction: column; align-items: center;">
+    <img src="./images/portfolio-shot.jpg" alt="Kushal Portfolio Photo" class="about-img" onerror="this.src='https://via.placeholder.com/500x400?text=Kushal+Creative+Work'">
+    
+    <a href="https://your-gallery-link.com" target="_blank" style="text-decoration: none;">
+        <div style="margin-top: 15px; background: var(--primary); color: white; padding: 8px 25px; border-radius: 50px; font-size: 0.9rem; font-weight: 500; transition: 0.3s; box-shadow: 0 4px 10px rgba(108, 92, 231, 0.2);">
+            More Photos <i class="fas fa-chevron-right" style="font-size: 0.7rem; margin-left: 5px;"></i>
+        </div>
+    </a>
+</div>
 
     <div>
       <h3>Precision & Creativity</h3>
@@ -156,4 +162,5 @@ button { background: var(--primary); color: white; border: none; padding: 1rem; 
 
 </body>
 </html>
+
 
