--- a/index.html
+++ b/index.html
@@ -106,10 +106,11 @@ button { background: var(--primary); color: white; border: none; padding: 1rem; 
         </div>
         
         <a href="photocollection.html" target="_blank" style="text-decoration: none; display: inline-block; margin-top: 15px;">
-            <div style="background: var(--primary); color: white; padding: 10px 25px; border-radius: 50px; font-size: 0.9rem; font-weight: 500; transition: 0.3s; box-shadow: 0 4px 10px rgba(108, 92, 231, 0.2);">
-                More Photos <i class="fas fa-chevron-right" style="font-size: 0.7rem; margin-left: 5px;"></i>
-            </div>
-        </a>
+    <div style="background: #6c5ce7; color: white; padding: 10px 25px; border-radius: 50px; font-size: 0.9rem; font-weight: 500; transition: 0.3s; box-shadow: 0 4px 10px rgba(108, 92, 231, 0.2); cursor: pointer;">
+        More Photos <i class="fas fa-chevron-right" style="font-size: 0.7rem; margin-left: 5px;"></i>
+    </div>
+</a>
+
     </div>
 
     <div class="about-text">
@@ -163,6 +164,7 @@ button { background: var(--primary); color: white; border: none; padding: 1rem; 
 
 </body>
 </html>
+
 
 
 
