Update Font Awesome stylesheet to version 6.4.2
Updated Font Awesome stylesheet link to the latest version and added integrity and crossorigin attributes for security.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-M0V0...snip..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Kushal - Accountant & Creator Portfolio</title>
@@ -115,14 +117,17 @@ button { background: var(--primary); color: white; border: none; padding: 1rem; 
     </div>
 
     <div class="about-text">
-        <h3>Precision & Creativity</h3>
-        <p>I am a student from <strong>Okhaldhunga, Nepal</strong>. I combine the analytical mind of an <strong>Accountant</strong> with the creative eye of a <strong>Photographer</strong>.</p>
-        <div class="social-icons" style="margin-top: 20px;">
+  <h3>Precision & Creativity</h3>
+  <p>I am a student from <strong>Okhaldhunga, Nepal</strong>. I combine the analytical mind of an <strong>Accountant</strong> with the creative eye of a <strong>Photographer</strong>.</p>
+
+  <div class="social-icons" style="margin-top: 20px;">
     <a href="https://facebook.com/kushalphuyal01" target="_blank"><i class="fab fa-facebook"></i></a>
     <a href="https://tiktok.com/@kushalphuyal01" target="_blank"><i class="fab fa-tiktok"></i></a>
-    <a href="https://x.com/kushalphuyal01?s=21" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+    <a href="https://x.com/kushalphuyal01?s=21" target="_blank"><i class="fab fa-x" style="font-size: 24px; color:#1DA1F2;"></i></a>
     <a href="https://wa.me/9779863970493" target="_blank"><i class="fab fa-whatsapp"></i></a>      
+  </div>
 </div>
+
    
 </section>
 
@@ -165,6 +170,7 @@ button { background: var(--primary); color: white; border: none; padding: 1rem; 
 
 </body>
 </html>
+
 
 
 
