--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ button { background: var(--primary); color: white; border: none; padding: 1rem; 
         <h3>EMI Calculator</h3>
         <p>A functional tool for loan calculations, built with HTML, CSS, and JS.</p>
         <div class="project-links">
-          <a href="emi code.html" target="_blank">Live Demo <i class="fas fa-external-link-alt"></i></a>
+        <a href="emi-code.html" target="_blank">Live Demo <i class="fas fa-external-link-alt"></i></a>
         </div>
       </div>
     </div>
