--- a/emi-code.html
+++ b/emi-code.html
@@ -1,13 +1,13 @@
- <div><br class="Apple-interchange-newline"><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<script type="text/javascript" src="https://gc.kes.v2.scr.kaspersky-labs.com/7EA5E9BB-55E1-4C31-9C21-4943DDFED2E4/main.js?attr=8Hh8FSC0r6kt0V70nlJJeCCSNU6nV5Nlz0TVjaI2uMPbTekPb_7CAH1QsVnO2DQhVGjzlJD_tBJHmckXM5G2dOUSkglEtpBb9ICeRjMtxtoyXZQeFqOWqrh6uyBflD-4Jdfu9UJ1SomEttthGTSyXA" charset="UTF-8"></script><center>
-WELL COME
-Kushal Phuyal
-</center>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professional EMI Calculator</title>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <!-- Font Awesome for external link icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -16,23 +16,28 @@ Kushal Phuyal
             margin: 0;
             padding: 0;
         }
+        .welcome {
+            text-align: center;
+            font-size: 26px;
+            margin: 20px 0;
+        }
         .container {
             max-width: 900px;
-            margin: 50px auto;
+            margin: 20px auto;
             background-color: #fff;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            padding: 25px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            border-radius: 10px;
             position: relative;
         }
         h1 {
             text-align: center;
             color: #2c3e50;
-            margin-bottom: 20px;
+            margin-bottom: 25px;
         }
         .input-container {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 20px;
             margin-bottom: 20px;
         }
@@ -41,7 +46,7 @@ Kushal Phuyal
             flex-direction: column;
         }
         .input-group label {
-            font-weight: bold;
+            font-weight: 600;
             margin-bottom: 5px;
             color: #34495e;
         }
@@ -49,7 +54,7 @@ Kushal Phuyal
             padding: 10px;
             font-size: 16px;
             border: 1px solid #ccc;
-            border-radius: 4px;
+            border-radius: 6px;
         }
         .btn {
             width: 100%;
@@ -58,9 +63,9 @@ Kushal Phuyal
             background-color: #27ae60;
             color: white;
             border: none;
-            border-radius: 4px;
+            border-radius: 6px;
             cursor: pointer;
-            transition: background-color 0.3s;
+            transition: 0.3s;
         }
         .btn:hover {
             background-color: #2ecc71;
@@ -68,50 +73,47 @@ Kushal Phuyal
         #result {
             margin-top: 30px;
         }
-        #result h3 {
-            color: #2980b9;
-        }
-
-        /* Draggable Summary */
         .summary {
             background-color: #f9f9f9;
             padding: 15px;
-            border-radius: 4px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            max-width: 250px;
+            border-radius: 6px;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+            max-width: 260px;
             cursor: move;
             position: absolute;
             top: 20px;
             left: 20px;
         }
-
         .scrollable-table {
-            max-height: 300px;
+            max-height: 320px;
             overflow-y: auto;
             margin-top: 20px;
         }
-
         table {
             width: 100%;
             border-collapse: collapse;
         }
         table, th, td {
             border: 1px solid #ddd;
-            padding: 12px;
+            padding: 10px;
         }
         th {
             background-color: #2980b9;
             color: white;
         }
-        td {
-            text-align: right;
-        }
         td:first-child {
             text-align: center;
+        }
+        td {
+            text-align: right;
         }
     </style>
 </head>
 <body>
+
+    <div class="welcome">
+        WELL COME<br>Kushal Phuyal
+    </div>
 
     <div class="container">
         <h1>Professional EMI Calculator</h1>
@@ -136,13 +138,8 @@ Kushal Phuyal
         <button class="btn" onclick="calculateEMI()">Calculate EMI</button>
 
         <div id="result">
-            <div class="summary" id="summary">
-                <!-- Summary will be displayed here -->
-            </div>
-            
-            <div class="scrollable-table" id="tableContainer">
-                <!-- EMI table will be displayed here -->
-            </div>
+            <div class="summary" id="summary"></div>
+            <div class="scrollable-table" id="tableContainer"></div>
         </div>
     </div>
 
@@ -157,60 +154,49 @@ Kushal Phuyal
                 return;
             }
 
-            // EMI calculation
             let emi = principal * rate * Math.pow(1 + rate, months) / (Math.pow(1 + rate, months) - 1);
-
-            // Total Interest
             let totalInterest = emi * months - principal;
-
-            // Service charge (1.3% of principal)
             let serviceCharge = principal * 0.013;
-
-            // Insurance charge (0.425% of principal per year)
             let insuranceCharge = principal * 0.00425 * Math.ceil(months / 12);
-
-            // Total service and insurance charge
             let totalCharges = serviceCharge + insuranceCharge;
-
-            // Total cost
             let totalCost = principal + totalInterest + totalCharges;
 
+            let remainingPrincipal = principal;
             let startDate = new Date();
-            let resultDiv = document.getElementById("result");
 
-            // Clear previous results
-            document.getElementById("summary").innerHTML = "";
-            document.getElementById("tableContainer").innerHTML = "";
+            document.getElementById("summary").innerHTML = `
+                <h3>EMI Summary</h3>
+                <p>Monthly EMI: <strong>${emi.toFixed(2)}</strong></p>
+                <p>Total Interest: <strong>${totalInterest.toFixed(2)}</strong></p>
+                <p>Service Charge (1.3%): <strong>${serviceCharge.toFixed(2)}</strong></p>
+                <p>Insurance Charge (0.425% per year): <strong>${insuranceCharge.toFixed(2)}</strong></p>
+                <p>Total Charges (Service + Insurance): <strong>${totalCharges.toFixed(2)}</strong></p>
+                <p>Total Cost: <strong>${totalCost.toFixed(2)}</strong></p>
+            `;
 
-            // Display summary
-            let summaryDiv = document.getElementById("summary");
-            summaryDiv.innerHTML += `<h3>EMI Summary</h3>`;
-            summaryDiv.innerHTML += `<p>Monthly EMI: <strong>${emi.toFixed(2)}</strong></p>`;
-            summaryDiv.innerHTML += `<p>Total Interest: <strong>${totalInterest.toFixed(2)}</strong></p>`;
-            summaryDiv.innerHTML += `<p>Service Charge (1.3%): <strong>${serviceCharge.toFixed(2)}</strong></p>`;
-            summaryDiv.innerHTML += `<p>Insurance Charge (0.425% per year): <strong>${insuranceCharge.toFixed(2)}</strong></p>`;
-            summaryDiv.innerHTML += `<p>Total Charges (Service + Insurance): <strong>${totalCharges.toFixed(2)}</strong></p>`;
-            summaryDiv.innerHTML += `<p>Total Cost: <strong>${totalCost.toFixed(2)}</strong></p>`;
-
-            // EMI schedule
-            let tableDiv = document.getElementById("tableContainer");
-            let table = `<table><tr><th>EMI No.</th><th>Payment Date</th><th>Principal Paid</th><th>Interest Paid</th><th>Total EMI</th></tr>`;
+            let table = `<table>
+                <tr><th>EMI No.</th><th>Payment Date</th><th>Principal Paid</th><th>Interest Paid</th><th>Total EMI</th></tr>`;
 
             for (let i = 1; i <= months; i++) {
-                let interestPaid = principal * rate;
+                let interestPaid = remainingPrincipal * rate;
                 let principalPaid = emi - interestPaid;
-                principal -= principalPaid;
+                remainingPrincipal -= principalPaid;
 
                 let paymentDate = new Date(startDate);
                 paymentDate.setMonth(paymentDate.getMonth() + i - 1);
-
                 let formattedDate = paymentDate.toISOString().split("T")[0];
 
-                table += `<tr><td>${i}</td><td>${formattedDate}</td><td>${principalPaid.toFixed(2)}</td><td>${interestPaid.toFixed(2)}</td><td>${emi.toFixed(2)}</td></tr>`;
+                table += `<tr>
+                    <td>${i}</td>
+                    <td>${formattedDate}</td>
+                    <td>${principalPaid.toFixed(2)}</td>
+                    <td>${interestPaid.toFixed(2)}</td>
+                    <td>${emi.toFixed(2)}</td>
+                </tr>`;
             }
 
             table += `</table>`;
-            tableDiv.innerHTML += table;
+            document.getElementById("tableContainer").innerHTML = table;
         }
 
         // Draggable summary
@@ -218,7 +204,6 @@ Kushal Phuyal
 
         function dragElement(el) {
             let pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
-
             el.onmousedown = dragMouseDown;
 
             function dragMouseDown(e) {
@@ -248,3 +233,5 @@ Kushal Phuyal
         }
     </script>
 
+</body>
+</html>
