--- a/index.html
+++ b/index.html
@@ -147,6 +147,22 @@ button { background: var(--primary); color: white; border: none; padding: 1rem; 
   </div>
 </section>
 
+<section id="account with ai">
+  <h2 class="section-title">My ai</h2>
+  <div class="projects-grid">
+    <div class="project-card">
+      <img src="image link" class="project-img" alt="account with ai" onerror="this.src='https://via.placeholder.com/400x200?text=ai+account'">
+      <div class="project-info">
+        <h3>ai account solution</h3>
+        <p>A functional tool for auuount with ai, built with HTML, CSS, and JS.</p>
+        <div class="project-links">
+        <a href="ai.html" target="_blank">Live Demo <i class="fas fa-external-link-alt"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section id="contact">
   <h2 class="section-title">Get In Touch</h2>
   <div class="grid-2">
