--- a/index.html
+++ b/index.html
@@ -135,33 +135,42 @@ button { background: var(--primary); color: white; border: none; padding: 1rem; 
   <h2 class="section-title">My Projects</h2>
   <div class="projects-grid">
     <div class="project-card">
-      <img src="https://kushalphuyal.github.io/images/emi-calculator.png" class="project-img" alt="EMI Calculator" onerror="this.src='https://via.placeholder.com/400x200?text=EMI+Calculator'">
+      <img src="https://kushalphuyal.github.io/images/emi-calculator.png" 
+           class="project-img" alt="EMI Calculator" 
+           onerror="this.src='https://via.placeholder.com/400x200?text=EMI+Calculator'">
       <div class="project-info">
         <h3>EMI Calculator</h3>
         <p>A functional tool for loan calculations, built with HTML, CSS, and JS.</p>
         <div class="project-links">
-        <a href="emi-code.html" target="_blank">Live Demo <i class="fas fa-external-link-alt"></i></a>
+          <a href="emi-code.html" target="_blank">
+            Live Demo <i class="fas fa-external-link-alt"></i>
+          </a>
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<section id="account with ai">
-  <h2 class="section-title">My ai</h2>
+<section id="account-with-ai">
+  <h2 class="section-title">My AI</h2>
   <div class="projects-grid">
     <div class="project-card">
-      <img src="image link" class="project-img" alt="account with ai" onerror="this.src='https://via.placeholder.com/400x200?text=ai+account'">
+      <img src="image link" class="project-img" alt="account with ai" 
+           onerror="this.src='https://via.placeholder.com/400x200?text=AI+Account'">
       <div class="project-info">
-        <h3>ai account solution</h3>
-        <p>A functional tool for auuount with ai, built with HTML, CSS, and JS.</p>
+        <h3>AI Account Solution</h3>
+        <p>A functional tool for account with AI, built with HTML, CSS, and JS.</p>
         <div class="project-links">
-        <a href="ai.html" target="_blank">Live Demo <i class="fas fa-external-link-alt"></i></a>
+          <a href="ai.html" target="_blank">
+            Live Demo <i class="fas fa-external-link-alt"></i>
+          </a>
         </div>
       </div>
     </div>
   </div>
 </section>
+
+
 
 <section id="contact">
   <h2 class="section-title">Get In Touch</h2>
